[package]
name = "pico-midi-synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-time = "0.12.1"


defmt = "0.3.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

rp-pico = "0.3.0"
pio = "0.2.0"
pio-proc = "0.2.1"

# [dev-dependencies]


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# Set the default for dependencies.
[profile.dev.package."*"]
# Full optimization for dependencies
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in development mode.
opt-level = 1