[package]
name = "pico-midi-synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = { version = "1" }
embedded-time = "0.12.1"
fugit = "0.3.6"


defmt = "0.3.10"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

rp-pico = "0.9.0"
pio = "0.3.0"
pio-proc = "0.2.2"

synth = { path = "../synth"}

# [dev-dependencies]


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# Set the default for dependencies.
[profile.dev.package."*"]
# Full optimization for dependencies
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in development mode.
opt-level = 1
